--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<p>这是我安彬的主页！！！</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" id="viewport"
+        content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>义鼎天集团
+    </title>
+    <link rel="stylesheet" href="./css/idx.css">
+</head>
+
+<body>
+    <div id="all">
+        <!-- 商标 -->
+        <div id="ydt"></div>
+        <!-- 头部宣传图 -->
+        <div id="xct"></div>
+        <!-- 导航栏 -->
+        <div id="dh">
+            <ul id="dhl">
+                <li>关于集团</li>
+                <li>要闻回顾</li>
+                <li>联系我们</li>
+            </ul>
+        </div>
+        <!-- 内容 -->
+        <div id="nr"></div>
+    </div>
+    <a href="https://uri.amap.com/marker?position=11.33,55.33&name=所在的位置名称">高德地图</a>
+</body>
+
+</html>
